# trainkata

./: LICENSE  README.md  trainkata.cabal
src/: Lib.hs
test/: Spec.hs
