name:                trainkata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/anfelor/trainkata#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Lorenzen
maintainer:          anfelor@posteo.de
copyright:           2020 Anton Lorenzen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , containers
  default-language:    Haskell2010

executable trainkata-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trainkata
  default-language:    Haskell2010

test-suite trainkata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trainkata
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , containers
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anfelor/trainkata
